tests/ui/canonical_control_reintroduction.stderr
error[E0425]: cannot find type `CanonicalControl` in module `hibana::integration::cap`
 --> tests/ui/canonical_control_reintroduction.rs:4:60
  |
4 |     let _ = core::mem::size_of::<hibana::integration::cap::CanonicalControl<LoopContinueKind>>();
  |                                                            ^^^^^^^^^^^^^^^^ not found in `hibana::integration::cap`
